--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
       { id:"jesko1",   name:"2024 Koenigsegg Jesko Absolut",   cls:"GT",     topSpeed:311, zeroToSixty:2.3,bhp:1280, handling:91, img:"jesko1.png" },
 
       /* Add more cars below (just keep unique ids) */
-      { id:"lynx",    name:"Lynx",    cls:"GT",     topSpeed:218, zeroToSixty:3.55,bhp:440, handling:86, img:"lynx.png" },
+      { id:"amgone1",    name:"2023 Mercedes-AMG One",    cls:"Track",     topSpeed:219, zeroToSixty:2.9,bhp:1049, handling:106, img:"amgone1.png" },
       { id:"comet",   name:"Comet",   cls:"Track",  topSpeed:212, zeroToSixty:3.65,bhp:420, handling:96, img:"comet.png" },
       { id:"sabre",   name:"Sabre",   cls:"GT",     topSpeed:238, zeroToSixty:3.15,bhp:540, handling:74, img:"sabre.png" },
       { id:"zenith",  name:"Zenith",  cls:"Hyper",  topSpeed:255, zeroToSixty:2.85,bhp:690, handling:80, img:"zenith.png" },
