--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
 
       /* Add more cars below (just keep unique ids) */
       { id:"amgone1",    name:"2023 Mercedes-AMG One",    cls:"Track",     topSpeed:219, zeroToSixty:2.9,bhp:1049, handling:106, img:"amgone1.png" },
-      { id:"comet",   name:"Comet",   cls:"Track",  topSpeed:212, zeroToSixty:3.65,bhp:420, handling:96, img:"comet.png" },
+      { id:"gt21",   name:" 2021 Porsche 911 GT2 RS Manthey Performance Kit",   cls:"Track",  topSpeed:211, zeroToSixty:2.7,bhp:690, handling:104, img:"gt21.png" },
       { id:"sabre",   name:"Sabre",   cls:"GT",     topSpeed:238, zeroToSixty:3.15,bhp:540, handling:74, img:"sabre.png" },
       { id:"zenith",  name:"Zenith",  cls:"Hyper",  topSpeed:255, zeroToSixty:2.85,bhp:690, handling:80, img:"zenith.png" },
 
