--- a/index.html
+++ b/index.html
@@ -834,13 +834,13 @@
 
       { id:"m31",   name:"2012 BMW M3",   cls:"GT",     topSpeed:155, zeroToSixty:4.3, bhp:414, handling:86, img:"m31.png" },
       { id:"cobra1",  name:"2020 Ford Mustang Cobra Jet 1400",  cls:"Track",  topSpeed:179, zeroToSixty:1.5, bhp:1400, handling:62, img:"cobra1.png" },
-      { id:"919evo1",    name:"2018 Porsche 919 Hybrid Evo",    cls:"Track",  topSpeed:230, zeroToSixty:2.1,bhp:1160, handling:113, img:"919evo1.png" },
+      { id:"919evo1",    name:"2018 Porsche 919 Hybrid Evo",    cls:"Track",  topSpeed:230, zeroToSixty:2.1,bhp:1160, handling:114, img:"919evo1.png" },
       { id:"jesko1",   name:"2024 Koenigsegg Jesko Absolut",   cls:"GT",     topSpeed:311, zeroToSixty:2.3,bhp:1280, handling:91, img:"jesko1.png" },
 
       /* Add more cars below (just keep unique ids) */
       { id:"amgone1",    name:"2023 Mercedes-AMG One",    cls:"Track",     topSpeed:219, zeroToSixty:2.9,bhp:1049, handling:106, img:"amgone1.png" },
       { id:"gt21",   name:" 2021 Porsche 911 GT2 RS Manthey Performance Kit",   cls:"Track",  topSpeed:211, zeroToSixty:2.7,bhp:690, handling:104, img:"gt21.png" },
-      { id:"sabre",   name:"Sabre",   cls:"GT",     topSpeed:238, zeroToSixty:3.15,bhp:540, handling:74, img:"sabre.png" },
+      { id:"p11",   name:"2017 McLaren P1 LM",   cls:"GT",     topSpeed:214, zeroToSixty:2.4,bhp:986, handling:105, img:"p11.png" },
       { id:"zenith",  name:"Zenith",  cls:"Hyper",  topSpeed:255, zeroToSixty:2.85,bhp:690, handling:80, img:"zenith.png" },
 
       { id:"pulse",   name:"Pulse",   cls:"Track",  topSpeed:208, zeroToSixty:3.7, bhp:405, handling:98, img:"pulse.png" },
