--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
       { id:"amgone1",    name:"2023 Mercedes-AMG One",    cls:"Track",     topSpeed:219, zeroToSixty:2.9,bhp:1049, handling:106, img:"amgone1.png" },
       { id:"gt21",   name:" 2021 Porsche 911 GT2 RS Manthey Performance Kit",   cls:"Track",  topSpeed:211, zeroToSixty:2.7,bhp:690, handling:105, img:"gt21.png" },
       { id:"p11",   name:"2017 McLaren P1 LM",   cls:"GT",     topSpeed:214, zeroToSixty:2.4,bhp:986, handling:105, img:"p11.png" },
-      { id:"zenith",  name:"Zenith",  cls:"Hyper",  topSpeed:255, zeroToSixty:2.85,bhp:690, handling:80, img:"zenith.png" },
+      { id:"amggt1",  name:"2020 Mercedes-AMG GT Black Series",  cls:"GT",  topSpeed:202, zeroToSixty:3.1,bhp:720, handling:104, img:"amggt1.png" },
 
       { id:"pulse",   name:"Pulse",   cls:"Track",  topSpeed:208, zeroToSixty:3.7, bhp:405, handling:98, img:"pulse.png" },
       { id:"vector",  name:"Vector",  cls:"GT",     topSpeed:226, zeroToSixty:3.35,bhp:490, handling:85, img:"vector.png" },
