--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
       { id:"p11",   name:"2017 McLaren P1 LM",   cls:"GT",     topSpeed:214, zeroToSixty:2.4,bhp:986, handling:105, img:"p11.png" },
       { id:"amggt1",  name:"2020 Mercedes-AMG GT Black Series",  cls:"GT",  topSpeed:202, zeroToSixty:3.1,bhp:720, handling:104, img:"amggt1.png" },
 
-      { id:"pulse",   name:"Pulse",   cls:"Track",  topSpeed:208, zeroToSixty:3.7, bhp:405, handling:98, img:"pulse.png" },
+      { id:"gt3rs1",   name:"2022 Porsche 911 GT3 RS (992)",   cls:"GT",  topSpeed:184, zeroToSixty:3.0, bhp:518, handling:105, img:"gt3rs1.png" },
       { id:"vector",  name:"Vector",  cls:"GT",     topSpeed:226, zeroToSixty:3.35,bhp:490, handling:85, img:"vector.png" },
       { id:"arc",     name:"Arc",     cls:"Track",  topSpeed:216, zeroToSixty:3.45,bhp:470, handling:94, img:"arc.png" },
       { id:"titan",   name:"Titan",   cls:"GT",     topSpeed:234, zeroToSixty:3.28,bhp:525, handling:79, img:"titan.png" }
