--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
       { id:"amggt1",  name:"2020 Mercedes-AMG GT Black Series",  cls:"GT",  topSpeed:202, zeroToSixty:3.1,bhp:720, handling:104, img:"amggt1.png" },
 
       { id:"gt3rs1",   name:"2022 Porsche 911 GT3 RS (992)",   cls:"GT",  topSpeed:184, zeroToSixty:3.0, bhp:518, handling:105, img:"gt3rs1.png" },
-      { id:"vector",  name:"Vector",  cls:"GT",     topSpeed:226, zeroToSixty:3.35,bhp:490, handling:85, img:"vector.png" },
+      { id:"svj1",  name:"2018 Lamborghini Aventador SVJ",  cls:"GT",     topSpeed:217, zeroToSixty:2.8,bhp:759, handling:103, img:"svj1.png" },
       { id:"arc",     name:"Arc",     cls:"Track",  topSpeed:216, zeroToSixty:3.45,bhp:470, handling:94, img:"arc.png" },
       { id:"titan",   name:"Titan",   cls:"GT",     topSpeed:234, zeroToSixty:3.28,bhp:525, handling:79, img:"titan.png" }
     ];
