--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
 
       { id:"gt3rs1",   name:"2022 Porsche 911 GT3 RS (992)",   cls:"GT",  topSpeed:184, zeroToSixty:3.0, bhp:518, handling:105, img:"gt3rs1.png" },
       { id:"svj1",  name:"2018 Lamborghini Aventador SVJ",  cls:"GT",     topSpeed:217, zeroToSixty:2.8,bhp:759, handling:103, img:"svj1.png" },
-      { id:"arc",     name:"Arc",     cls:"Track",  topSpeed:216, zeroToSixty:3.45,bhp:470, handling:94, img:"arc.png" },
+      { id:"sr81",     name:"2011 Radical SR8 RX",     cls:"Track",  topSpeed:178, zeroToSixty:2.7,bhp:430, handling:108, img:"sr81.png" },
       { id:"titan",   name:"Titan",   cls:"GT",     topSpeed:234, zeroToSixty:3.28,bhp:525, handling:79, img:"titan.png" }
     ];
 
