--- a/index.html
+++ b/index.html
@@ -846,7 +846,8 @@
       { id:"gt3rs1",   name:"2022 Porsche 911 GT3 RS (992)",   cls:"GT",  topSpeed:184, zeroToSixty:3.0, bhp:518, handling:105, img:"gt3rs1.png" },
       { id:"svj1",  name:"2018 Lamborghini Aventador SVJ",  cls:"GT",     topSpeed:217, zeroToSixty:2.8,bhp:759, handling:103, img:"svj1.png" },
       { id:"sr81",     name:"2011 Radical SR8 RX",     cls:"Track",  topSpeed:178, zeroToSixty:2.7,bhp:430, handling:108, img:"sr81.png" },
-      { id:"gt2rs1",   name:"2017 Porsche 911 GT2 RS (991)",   cls:"GT",     topSpeed:211, zeroToSixty:2.7,bhp:690, handling:102, img:"gt2rs1.png" }
+      { id:"gt2rs1",   name:"2017 Porsche 911 GT2 RS (991)",   cls:"GT",     topSpeed:211, zeroToSixty:2.7,bhp:690, handling:102, img:"gt2rs1.png" },
+      { id:"sr82",   name:"2009 Radical SR8LM",   cls:"Track",     topSpeed:178, zeroToSixty:2.7,bhp:457, handling:109, img:"sr82.png" }
     ];
 
     /* ============================================================
