--- a/index.html
+++ b/index.html
@@ -848,7 +848,8 @@
       { id:"sr81",     name:"2011 Radical SR8 RX",     cls:"Track",  topSpeed:178, zeroToSixty:2.7,bhp:430, handling:108, img:"sr81.png" },
       { id:"gt2rs1",   name:"2017 Porsche 911 GT2 RS (991)",   cls:"GT",     topSpeed:211, zeroToSixty:2.7,bhp:690, handling:102, img:"gt2rs1.png" },
       { id:"sr82",   name:"2009 Radical SR8LM",   cls:"Track",     topSpeed:178, zeroToSixty:2.7,bhp:457, handling:108, img:"sr82.png" },
-      { id:"gt3rs2",   name:"2021 Porsche 911 GT3 RS Manthey Performance Kit",   cls:"Track",     topSpeed:177, zeroToSixty:3.0,bhp:512, handling:105, img:"gt3rs2.png" }
+      { id:"gt3rs2",   name:"2021 Porsche 911 GT3 RS Manthey Performance Kit",   cls:"Track",     topSpeed:177, zeroToSixty:3.0,bhp:512, handling:105, img:"gt3rs2.png" },
+      { id:"huracan1",   name:"2017 Lamborghini Huracán Performante",   cls:"GT",   topSpeed:202, zeroToSixty:2.8,bhp:631, handling:101, img:"huracan1.png" }
     ];
 
     /* ============================================================
