--- a/index.html
+++ b/index.html
@@ -1366,48 +1366,70 @@
       // You can add more points to make it even more technical.
       const pts = [
 
-  // ===== LONG MAIN STRAIGHT =====
-  v2(120, 120),   // start/finish
-  v2(320, 120),
-  v2(560, 120),
-  v2(820, 120),
-  v2(940, 150),
+  // ============================
+  // EXTRA LONG MAIN STRAIGHT
+  // ============================
+  v2(60, 120),
+  v2(220, 120),
+  v2(380, 120),
+  v2(540, 120),
+  v2(700, 120),
+  v2(860, 120),
+  v2(940, 120),
 
-  // ===== HEAVY BRAKING HAIRPIN =====
-  v2(940, 300),
-  v2(820, 380),
-  v2(680, 380),
+  // ============================
+  // FAST RIGHT SWEEPER
+  // ============================
+  v2(960, 180),
+  v2(940, 280),
 
-  // ===== TECHNICAL S SECTION =====
-  v2(620, 320),
-  v2(560, 400),
-  v2(500, 300),
-  v2(440, 420),
-  v2(380, 320),
+  // ============================
+  // HEAVY BRAKING HAIRPIN
+  // ============================
+  v2(820, 360),
+  v2(640, 360),
 
-  // ===== SHORT STRAIGHT =====
-  v2(300, 300),
-  v2(220, 300),
+  // ============================
+  // LONG EXIT STRAIGHT
+  // ============================
+  v2(480, 360),
+  v2(320, 360),
+  v2(180, 360),
 
-  // ===== SWEEPING LEFT =====
-  v2(160, 360),
-  v2(140, 460),
+  // ============================
+  // FAST LEFT BEND
+  // ============================
+  v2(140, 300),
+  v2(150, 220),
 
-  // ===== TIGHT COMPLEX =====
-  v2(240, 520),
-  v2(360, 500),
-  v2(420, 440),
+  // ============================
+  // SHORT STRAIGHT
+  // ============================
+  v2(240, 180),
+  v2(380, 180),
 
-  // ===== FINAL FAST BENDS =====
-  v2(500, 380),
-  v2(620, 340),
-  v2(760, 300),
-  v2(880, 240),
+  // ============================
+  // TECHNICAL COMPLEX
+  // ============================
+  v2(420, 240),
+  v2(480, 170),
+  v2(560, 260),
+  v2(620, 190),
 
-  // back toward straight
-  v2(700, 180),
-  v2(420, 150),
-  v2(200, 140)
+  // ============================
+  // FAST BACK STRAIGHT
+  // ============================
+  v2(720, 160),
+  v2(860, 160),
+
+  // ============================
+  // FINAL FLOWING BENDS
+  // ============================
+  v2(920, 220),
+  v2(780, 260),
+  v2(560, 240),
+  v2(360, 210),
+  v2(200, 170)
 ];
 
       // Auto-close
