--- a/index.html
+++ b/index.html
@@ -850,10 +850,10 @@
       { id:"sr82",   name:"2009 Radical SR8LM",   cls:"Track",     topSpeed:178, zeroToSixty:2.7,bhp:457, handling:108, img:"sr82.png" },
       { id:"gt3rs2",   name:"2021 Porsche 911 GT3 RS Manthey Performance Kit",   cls:"Track",     topSpeed:177, zeroToSixty:3.0,bhp:512, handling:105, img:"gt3rs2.png" },
       { id:"huracan1",   name:"2017 Lamborghini Huracán Performante",   cls:"GT",   topSpeed:202, zeroToSixty:2.8,bhp:631, handling:101, img:"huracan1.png" },
-      { id:"9181",   name:"2014 Porsche 918 Spyder",   cls:"GT",   topSpeed:214, zeroToSixty:2.4,bhp:889, handling:98, img:"9181.png" }
+      { id:"9181",   name:"2014 Porsche 918 Spyder",   cls:"GT",   topSpeed:214, zeroToSixty:2.4,bhp:889, handling:98, img:"9181.png" },
+      { id:"wrx1",   name:"2017 Subaru WRX STI Type RA NBR",   cls:"Track",   topSpeed:180, zeroToSixty:3.8,bhp:600, handling:97, img:"wrx1.png" }
     ];
-
-
+    
     /* ============================================================
       SECTION 2 • DOM HOOKS
     ============================================================ */
