--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 
         <div class="race-wrap">
           <div class="canvas-wrap">
-            <canvas id="canvas" width="980" height="560"></canvas>
+            <canvas id="canvas" width="1400" height="560"></canvas>
 
             <div class="overlay" id="overlay">
               <div class="overlay-card">
@@ -1368,70 +1368,83 @@
       // You can add more points to make it even more technical.
       const pts = [
 
-  // ============================
-  // EXTRA LONG MAIN STRAIGHT
-  // ============================
-  v2(60, 120),
-  v2(220, 120),
-  v2(380, 120),
-  v2(540, 120),
-  v2(700, 120),
-  v2(860, 120),
-  v2(940, 120),
+  // ==================================================
+  // SUPER LONG MAIN STRAIGHT (power + top speed zone)
+  // ==================================================
 
-  // ============================
-  // FAST RIGHT SWEEPER
-  // ============================
-  v2(960, 180),
-  v2(940, 280),
+  v2(40, 120),
+  v2(180, 120),
+  v2(320, 120),
+  v2(460, 120),
+  v2(600, 120),
+  v2(740, 120),
+  v2(880, 120),
+  v2(1020, 120),
+  v2(1160, 120),
+  v2(1300, 120),   // VERY long straight
 
-  // ============================
+  // ==================================================
+  // FAST RIGHT SWEEPER (barely lift)
+  // ==================================================
+
+  v2(1340, 190),
+  v2(1300, 320),
+
+  // ==================================================
   // HEAVY BRAKING HAIRPIN
-  // ============================
-  v2(820, 360),
-  v2(640, 360),
+  // ==================================================
 
-  // ============================
-  // LONG EXIT STRAIGHT
-  // ============================
-  v2(480, 360),
-  v2(320, 360),
-  v2(180, 360),
+  v2(1100, 400),
+  v2(850, 400),
 
-  // ============================
-  // FAST LEFT BEND
-  // ============================
-  v2(140, 300),
-  v2(150, 220),
+  // ==================================================
+  // LONG EXIT STRAIGHT (acceleration test)
+  // ==================================================
 
-  // ============================
+  v2(650, 400),
+  v2(450, 400),
+  v2(250, 400),
+
+  // ==================================================
+  // FLOWING LEFT BEND
+  // ==================================================
+
+  v2(200, 320),
+  v2(230, 220),
+
+  // ==================================================
   // SHORT STRAIGHT
-  // ============================
-  v2(240, 180),
-  v2(380, 180),
+  // ==================================================
 
-  // ============================
-  // TECHNICAL COMPLEX
-  // ============================
-  v2(420, 240),
-  v2(480, 170),
-  v2(560, 260),
-  v2(620, 190),
+  v2(380, 200),
+  v2(560, 200),
 
-  // ============================
-  // FAST BACK STRAIGHT
-  // ============================
-  v2(720, 160),
-  v2(860, 160),
+  // ==================================================
+  // TECHNICAL COMPLEX (handling zone)
+  // ==================================================
 
-  // ============================
-  // FINAL FLOWING BENDS
-  // ============================
-  v2(920, 220),
-  v2(780, 260),
-  v2(560, 240),
-  v2(360, 210),
-  v2(200, 170)
+  v2(600, 280),
+  v2(680, 200),
+  v2(760, 300),
+  v2(840, 220),
+
+  // ==================================================
+  // LONG BACK STRAIGHT
+  // ==================================================
+
+  v2(960, 190),
+  v2(1100, 190),
+  v2(1240, 190),
+
+  // ==================================================
+  // FINAL SWEEPERS BACK TO START
+  // ==================================================
+
+  v2(1320, 260),
+  v2(1080, 300),
+  v2(820, 260),
+  v2(560, 230),
+  v2(300, 180)
 ];
 
       // Auto-close
