--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
       { id:"golfgti1",   name:"2014 Volkswagen Golf GTI",   cls:"GT",     topSpeed:152, zeroToSixty:6.2, bhp:226, handling:81, img:"golfgti1.png" },
       { id:"golfgti2",  name:"2010 Volkswagen Golf GTI",  cls:"GT",  topSpeed:149, zeroToSixty:6.7, bhp:207, handling:78, img:"golfgti2.png" },
       { id:"cuprar",   name:"2002 SEAT Leon Cupra R",   cls:"GT",     topSpeed:150, zeroToSixty:7.0, bhp:210, handling:82, img:"cuprar1.png" },
-      { id:"plaid1",   name:"2024 Tesla Model S Plaid",   cls:"GT",  topSpeed:199, zeroToSixty:1.99, bhp:1020, handling:85, img:"plaid1.png" },
+      { id:"plaid1",   name:"2024 Tesla Model S Plaid",   cls:"GT",  topSpeed:199, zeroToSixty:1.99, bhp:1020, handling:86, img:"plaid1.png" },
       { id:"i30n1", name:"2019 Hyundai i30 N TCR", cls:"Track",  topSpeed:163, zeroToSixty:5.2, bhp:349, handling:99, img:"i30n1.png" },
 
       { id:"m31",   name:"2012 BMW M3",   cls:"GT",     topSpeed:155, zeroToSixty:4.3, bhp:414, handling:86, img:"m31.png" },
@@ -851,8 +851,10 @@
       { id:"gt3rs2",   name:"2021 Porsche 911 GT3 RS Manthey Performance Kit",   cls:"Track",     topSpeed:177, zeroToSixty:3.0,bhp:512, handling:105, img:"gt3rs2.png" },
       { id:"huracan1",   name:"2017 Lamborghini Huracán Performante",   cls:"GT",   topSpeed:202, zeroToSixty:2.8,bhp:631, handling:101, img:"huracan1.png" },
       { id:"9181",   name:"2014 Porsche 918 Spyder",   cls:"GT",   topSpeed:214, zeroToSixty:2.4,bhp:889, handling:99, img:"9181.png" },
-      { id:"wrx1",   name:"2017 Subaru WRX STI Type RA NBR",   cls:"Track",   topSpeed:180, zeroToSixty:3.0,bhp:600, handling:99, img:"wrx1.png" }
+      { id:"wrx1",   name:"2017 Subaru WRX STI Type RA NBR",   cls:"Track",   topSpeed:180, zeroToSixty:3.0,bhp:600, handling:99, img:"wrx1.png" },
+      { id:"gt41",   name:"2023 Porsche 718 Cayman GT4 RS Manthey Performance",   cls:"Track",   topSpeed:196, zeroToSixty:3.2,bhp:493, handling:104, img:"gt41.png" }
     ];
+  
     
     /* ============================================================
       SECTION 2 • DOM HOOKS
