--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@ for (let i=0;i<segs.length;i++){
           lastLapStartMs: 0,
 
           // micro variance / driving line offset
-          laneOffset: (idx - (all.length-1)/2) * 12,
+          laneOffset: 0,
 
           // sprite cached
           spritePath,
