--- a/index.html
+++ b/index.html
@@ -853,8 +853,10 @@
       { id:"9181",   name:"2014 Porsche 918 Spyder",   cls:"GT",   topSpeed:214, zeroToSixty:2.4,bhp:889, handling:100, img:"9181.png" },
       { id:"wrx1",   name:"2017 Subaru WRX STI Type RA NBR",   cls:"Track",   topSpeed:180, zeroToSixty:3.0,bhp:600, handling:100, img:"wrx1.png" },
       { id:"gt41",   name:"2023 Porsche 718 Cayman GT4 RS Manthey Performance",   cls:"Track",   topSpeed:196, zeroToSixty:3.2,bhp:493, handling:104, img:"gt41.png" },
-      { id:"gtb1",   name:"2023 Ferrari 296 GTB",   cls:"GT",   topSpeed:207, zeroToSixty:2.3,bhp:819, handling:99, img:"gtb1.png" }
+      { id:"gtb1",   name:"2023 Ferrari 296 GTB",   cls:"GT",   topSpeed:207, zeroToSixty:2.3,bhp:819, handling:99, img:"gtb1.png" },
+      { id:"pista1",   name:"2019 Ferrari 488 Pista",   cls:"GT",   topSpeed:213, zeroToSixty:2.7,bhp:710, handling:100, img:"pista1.png" }
     ];
+
   
     
     /* ============================================================
