--- a/index.html
+++ b/index.html
@@ -855,7 +855,8 @@
       { id:"gt41",   name:"2023 Porsche 718 Cayman GT4 RS Manthey Performance",   cls:"Track",   topSpeed:196, zeroToSixty:3.2,bhp:493, handling:104, img:"gt41.png" },
       { id:"gtb1",   name:"2023 Ferrari 296 GTB",   cls:"GT",   topSpeed:207, zeroToSixty:2.3,bhp:819, handling:99, img:"gtb1.png" },
       { id:"pista1",   name:"2019 Ferrari 488 Pista",   cls:"GT",   topSpeed:213, zeroToSixty:2.7,bhp:710, handling:100, img:"pista1.png" },
-      { id:"nevera1",   name:"2023 Rimac Nevera",   cls:"GT",   topSpeed:258, zeroToSixty:1.75,bhp:1914, handling:97, img:"nevera1.png" }
+      { id:"nevera1",   name:"2023 Rimac Nevera",   cls:"GT",   topSpeed:258, zeroToSixty:1.75,bhp:1914, handling:97, img:"nevera1.png" },
+      { id:"viper1",   name:"2017 Dodge Viper ACR (Mk V)",   cls:"GT",   topSpeed:177, zeroToSixty:3.3,bhp:645, handling:98, img:"viper1.png" }
     ];
   
 
