--- a/index.html
+++ b/index.html
@@ -856,7 +856,8 @@
       { id:"gtb1",   name:"2023 Ferrari 296 GTB",   cls:"GT",   topSpeed:207, zeroToSixty:2.3,bhp:819, handling:99, img:"gtb1.png" },
       { id:"pista1",   name:"2019 Ferrari 488 Pista",   cls:"GT",   topSpeed:213, zeroToSixty:2.7,bhp:710, handling:100, img:"pista1.png" },
       { id:"nevera1",   name:"2023 Rimac Nevera",   cls:"GT",   topSpeed:258, zeroToSixty:1.75,bhp:1914, handling:97, img:"nevera1.png" },
-      { id:"viper1",   name:"2017 Dodge Viper ACR (Mk V)",   cls:"GT",   topSpeed:177, zeroToSixty:3.3,bhp:645, handling:98, img:"viper1.png" }
+      { id:"viper1",   name:"2017 Dodge Viper ACR (Mk V)",   cls:"GT",   topSpeed:177, zeroToSixty:3.3,bhp:645, handling:98, img:"viper1.png" },
+      { id:"zr11",   name:"2019 Chevrolet Corvette ZR1 (C7)",   cls:"GT",   topSpeed:214, zeroToSixty:2.85,bhp:755, handling:98, img:"zr11.png" }
     ];
   
 
