--- a/index.html
+++ b/index.html
@@ -859,7 +859,8 @@
       { id:"viper1",   name:"2017 Dodge Viper ACR (Mk V)",   cls:"GT",   topSpeed:177, zeroToSixty:3.3,bhp:645, handling:98, img:"viper1.png" },
       { id:"zr11",   name:"2019 Chevrolet Corvette ZR1 (C7)",   cls:"GT",   topSpeed:214, zeroToSixty:2.85,bhp:755, handling:98, img:"zr11.png" },
       { id:"gtpro1",   name:"2019 Mercedes-Benz AMG GT R Pro",   cls:"GT",   topSpeed:198, zeroToSixty:3.5,bhp:577, handling:98, img:"gtpro1.png" },
-      { id:"ep91",   name:"2017 Nio EP9",   cls:"Track",   topSpeed:194, zeroToSixty:2.7,bhp:1360, handling:104, img:"ep91.png" }
+      { id:"ep91",   name:"2017 Nio EP9",   cls:"Track",   topSpeed:194, zeroToSixty:2.7,bhp:1360, handling:104, img:"ep91.png" },
+      { id:"zo61",   name:"2023 Chevrolet Corvette Z06 Z07 Package (C8)",   cls:"GT",   topSpeed:189, zeroToSixty:2.6,bhp:670, handling:97, img:"z061.png" }
     ];
   
     
