--- a/index.html
+++ b/index.html
@@ -865,7 +865,8 @@
       { id:"gtr1",   name:"2014 Nissan GT-R Nismo (R35)",   cls:"GT",   topSpeed:196, zeroToSixty:2.7,bhp:592, handling:97, img:"gtr1.png" },
       { id:"apollo1",   name:"2009 Gumpert Apollo Sport",   cls:"GT",   topSpeed:223, zeroToSixty:2.9,bhp:690, handling:96, img:"apollo1.png" },
       { id:"srt1",   name:"2010 Dodge Viper SRT-10 ACR",   cls:"GT",   topSpeed:202, zeroToSixty:3.4,bhp:600, handling:96, img:"srt1.png" },
-      { id:"carrera1",   name:"2025 Porsche 911 Carrera GTS",   cls:"GT",   topSpeed:194, zeroToSixty:2.6,bhp:534, handling:94, img:"carrera1.png" }
+      { id:"carrera1",   name:"2025 Porsche 911 Carrera GTS",   cls:"GT",   topSpeed:194, zeroToSixty:2.6,bhp:534, handling:94, img:"carrera1.png" },
+      { id:"carreragt1",   name:"2006 Porsche Carrera GT",   cls:"GT",   topSpeed:207, zeroToSixty:3.5,bhp:612, handling:93, img:"carreragt1.png" }
   
     ];
   
