--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
       { id:"zr11",   name:"2019 Chevrolet Corvette ZR1 (C7)",   cls:"GT",   topSpeed:214, zeroToSixty:2.85,bhp:755, handling:98, img:"zr11.png" },
       { id:"gtpro1",   name:"2019 Mercedes-Benz AMG GT R Pro",   cls:"GT",   topSpeed:198, zeroToSixty:3.5,bhp:577, handling:98, img:"gtpro1.png" },
       { id:"ep91",   name:"2017 Nio EP9",   cls:"Track",   topSpeed:194, zeroToSixty:2.7,bhp:1360, handling:104, img:"ep91.png" },
-      { id:"zo61",   name:"2023 Chevrolet Corvette Z06 Z07 Package (C8)",   cls:"GT",   topSpeed:189, zeroToSixty:2.6,bhp:670, handling:97, img:"zo61.png" },
+      { id:"z061",   name:"2023 Chevrolet Corvette Z06 Z07 Package (C8)",   cls:"GT",   topSpeed:189, zeroToSixty:2.6,bhp:670, handling:97, img:"z061.png" },
       { id:"720s1",   name:"2019 McLaren 720s",   cls:"GT",   topSpeed:212, zeroToSixty:2.7,bhp:710, handling:97, img:"720s1.png" },
       { id:"gtr1",   name:"2014 Nissan GT-R Nismo (R35)",   cls:"GT",   topSpeed:196, zeroToSixty:2.7,bhp:592, handling:97, img:"gtr1.png" },
       { id:"apollo1",   name:"2009 Gumpert Apollo Sport",   cls:"GT",   topSpeed:223, zeroToSixty:2.9,bhp:690, handling:96, img:"apollo1.png" },
