--- a/index.html
+++ b/index.html
@@ -868,7 +868,9 @@
       { id:"carrera1",   name:"2025 Porsche 911 Carrera GTS",   cls:"GT",   topSpeed:194, zeroToSixty:2.6,bhp:534, handling:94, img:"carrera1.png" },
       { id:"carreragt1",   name:"2006 Porsche Carrera GT",   cls:"GT",   topSpeed:207, zeroToSixty:3.5,bhp:612, handling:93, img:"carreragt1.png" },
       { id:"m41",   name:"2022 BMW M4 CSL",   cls:"GT",   topSpeed:191, zeroToSixty:3.6,bhp:543, handling:94, img:"m41.png" },
-      { id:"taycan1",   name:"2024 Porsche Taycan Turbo GT Weissach Package",   cls:"GT",   topSpeed:190, zeroToSixty:2.1,bhp:1093, handling:97, img:"taycan1.png" }
+      { id:"taycan1",   name:"2024 Porsche Taycan Turbo GT Weissach Package",   cls:"GT",   topSpeed:190, zeroToSixty:2.1,bhp:1093, handling:97, img:"taycan1.png" },
+      { id:"lfa1",   name:"2011 Lexus LFA Nurburgring Package",   cls:"GT",   topSpeed:202, zeroToSixty:3.5,bhp:562, handling:95, img:"lfa1.png" }
+  
   
     ];
   
