--- a/index.html
+++ b/index.html
@@ -870,7 +870,8 @@
       { id:"m41",   name:"2022 BMW M4 CSL",   cls:"GT",   topSpeed:191, zeroToSixty:3.6,bhp:543, handling:94, img:"m41.png" },
       { id:"taycan1",   name:"2024 Porsche Taycan Turbo GT Weissach Package",   cls:"GT",   topSpeed:190, zeroToSixty:2.1,bhp:1093, handling:97, img:"taycan1.png" },
       { id:"lfa1",   name:"2011 Lexus LFA Nurburgring Package",   cls:"GT",   topSpeed:202, zeroToSixty:3.5,bhp:562, handling:95, img:"lfa1.png" },
-      { id:"c631",   name:"2025 mercedes-Benz AMG GT 63 Pro",   cls:"GT",   topSpeed:197, zeroToSixty:3.2,bhp:604, handling:96, img:"c631.png" }
+      { id:"c631",   name:"2025 mercedes-Benz AMG GT 63 Pro",   cls:"GT",   topSpeed:197, zeroToSixty:3.2,bhp:604, handling:96, img:"c631.png" },
+      { id:"d81",   name:"2004 Donkervoort D8 RS",   cls:"GT",   topSpeed:154, zeroToSixty:3.5,bhp:350, handling:94, img:"d81.png" }
   
     ];
   
