--- a/index.html
+++ b/index.html
@@ -872,7 +872,8 @@
       { id:"lfa1",   name:"2011 Lexus LFA Nurburgring Package",   cls:"GT",   topSpeed:202, zeroToSixty:3.5,bhp:562, handling:95, img:"lfa1.png" },
       { id:"c631",   name:"2025 mercedes-Benz AMG GT 63 Pro",   cls:"GT",   topSpeed:197, zeroToSixty:3.2,bhp:604, handling:96, img:"c631.png" },
       { id:"d81",   name:"2004 Donkervoort D8 RS",   cls:"GT",   topSpeed:154, zeroToSixty:3.5,bhp:350, handling:94, img:"d81.png" },
-      { id:"aventador1",   name:"2015 Lamborghini Aventador LP750-4 SV",   cls:"GT",   topSpeed:218, zeroToSixty:2.6,bhp:740, handling:98, img:"aventador1.png" }
+      { id:"aventador1",   name:"2015 Lamborghini Aventador LP750-4 SV",   cls:"GT",   topSpeed:218, zeroToSixty:2.6,bhp:740, handling:98, img:"aventador1.png" },
+      { id:"camaro1",   name:"2018 Chevrolet Camaro ZL1 1LE Package",   cls:"GT",   topSpeed:193, zeroToSixty:3.5,bhp:650, handling:94, img:"camaro1.png" }
   
     ];
   
