--- a/index.html
+++ b/index.html
@@ -875,7 +875,8 @@
       { id:"aventador1",   name:"2015 Lamborghini Aventador LP750-4 SV",   cls:"GT",   topSpeed:218, zeroToSixty:2.6,bhp:740, handling:98, img:"aventador1.png" },
       { id:"camaro1",   name:"2018 Chevrolet Camaro ZL1 1LE Package",   cls:"GT",   topSpeed:193, zeroToSixty:3.5,bhp:650, handling:94, img:"camaro1.png" },
       { id:"turbos1",   name:"2026 Porsche 911 Turbo S",   cls:"GT",   topSpeed:205, zeroToSixty:2.4,bhp:701, handling:97, img:"turbos1.png" },
-      { id:"m42",   name:"2025 BMW M4 CS",   cls:"GT",   topSpeed:188, zeroToSixty:2.9,bhp:542, handling:93, img:"m42.png" }
+      { id:"m42",   name:"2025 BMW M4 CS",   cls:"GT",   topSpeed:188, zeroToSixty:2.9,bhp:542, handling:93, img:"m42.png" },
+      { id:"mcmurtry1",   name:"2022 McMurtry Spéirling",   cls:"Track",   topSpeed:185, zeroToSixty:1.4,bhp:1000, handling:113, img:"mcmurtry1.png" }
 
     ];
   
