--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
       { id:"jesko1",   name:"2024 Koenigsegg Jesko Absolut",   cls:"GT",     topSpeed:311, zeroToSixty:2.3,bhp:1280, handling:98, img:"jesko1.png" },
 
       /* Add more cars below (just keep unique ids) */
-      { id:"amgone1",    name:"2023 Mercedes-AMG One",    cls:"Track",     topSpeed:219, zeroToSixty:2.9,bhp:1049, handling:106, img:"amgone1.png" },
+      { id:"amgone1",    name:"2023 Mercedes-AMG One",    cls:"Track",     topSpeed:219, zeroToSixty:2.9,bhp:1049, handling:109, img:"amgone1.png" },
       { id:"gt21",   name:" 2021 Porsche 911 GT2 RS Manthey Performance Kit",   cls:"Track",  topSpeed:211, zeroToSixty:2.7,bhp:690, handling:105, img:"gt21.png" },
       { id:"p11",   name:"2017 McLaren P1 LM",   cls:"GT",     topSpeed:214, zeroToSixty:2.4,bhp:986, handling:105, img:"p11.png" },
       { id:"amggt1",  name:"2020 Mercedes-AMG GT Black Series",  cls:"GT",  topSpeed:202, zeroToSixty:3.1,bhp:720, handling:104, img:"amggt1.png" },
@@ -876,7 +876,9 @@
       { id:"camaro1",   name:"2018 Chevrolet Camaro ZL1 1LE Package",   cls:"GT",   topSpeed:193, zeroToSixty:3.5,bhp:650, handling:94, img:"camaro1.png" },
       { id:"turbos1",   name:"2026 Porsche 911 Turbo S",   cls:"GT",   topSpeed:205, zeroToSixty:2.4,bhp:701, handling:97, img:"turbos1.png" },
       { id:"m42",   name:"2025 BMW M4 CS",   cls:"GT",   topSpeed:188, zeroToSixty:2.9,bhp:542, handling:93, img:"m42.png" },
-      { id:"mcmurtry1",   name:"2022 McMurtry Spéirling",   cls:"Track",   topSpeed:185, zeroToSixty:1.4,bhp:1000, handling:113, img:"mcmurtry1.png" }
+      { id:"mcmurtry1",   name:"2022 McMurtry Spéirling",   cls:"Track",   topSpeed:185, zeroToSixty:1.4,bhp:1000, handling:113, img:"mcmurtry1.png" },
+      { id:"valkyrie1",   name:"2023 Aston Martin Valkyrie",   cls:"Track",   topSpeed:220, zeroToSixty:2.4,bhp:1139, handling:110, img:"valkyrie1.png" }
+
 
     ];
   
