--- a/index.html
+++ b/index.html
@@ -877,8 +877,8 @@
       { id:"turbos1",   name:"2026 Porsche 911 Turbo S",   cls:"GT",   topSpeed:205, zeroToSixty:2.4,bhp:701, handling:97, img:"turbos1.png" },
       { id:"m42",   name:"2025 BMW M4 CS",   cls:"GT",   topSpeed:188, zeroToSixty:2.9,bhp:542, handling:93, img:"m42.png" },
       { id:"mcmurtry1",   name:"2022 McMurtry Spéirling",   cls:"Track",   topSpeed:185, zeroToSixty:1.4,bhp:1000, handling:113, img:"mcmurtry1.png" },
-      { id:"valkyrie1",   name:"2023 Aston Martin Valkyrie",   cls:"Track",   topSpeed:220, zeroToSixty:2.4,bhp:1139, handling:110, img:"valkyrie1.png" }
-
+      { id:"valkyrie1",   name:"2023 Aston Martin Valkyrie",   cls:"Track",   topSpeed:220, zeroToSixty:2.4,bhp:1139, handling:110, img:"valkyrie1.png" },
+      { id:"toyota1",   name:"2019 Toyota TS050 Hybrid",   cls:"Track",   topSpeed:216, zeroToSixty:2.3,bhp:986, handling:113, img:"toyota1.png" }
 
     ];
   
