--- a/index.html
+++ b/index.html
@@ -878,7 +878,9 @@
       { id:"m42",   name:"2025 BMW M4 CS",   cls:"GT",   topSpeed:188, zeroToSixty:2.9,bhp:542, handling:93, img:"m42.png" },
       { id:"mcmurtry1",   name:"2022 McMurtry Spéirling",   cls:"Track",   topSpeed:185, zeroToSixty:1.4,bhp:1000, handling:113, img:"mcmurtry1.png" },
       { id:"valkyrie1",   name:"2023 Aston Martin Valkyrie",   cls:"Track",   topSpeed:220, zeroToSixty:2.4,bhp:1139, handling:110, img:"valkyrie1.png" },
-      { id:"toyota1",   name:"2019 Toyota TS050 Hybrid",   cls:"Track",   topSpeed:216, zeroToSixty:2.3,bhp:986, handling:113, img:"toyota1.png" }
+      { id:"toyota1",   name:"2019 Toyota TS050 Hybrid",   cls:"Track",   topSpeed:216, zeroToSixty:2.3,bhp:986, handling:113, img:"toyota1.png" },
+      { id:"gt31",   name:"2025 Porsche 911 GT3 R LMGT3",   cls:"Track",   topSpeed:186, zeroToSixty:2.9,bhp:550, handling:102, img:"gt31.png" }
+
 
     ];
   
