--- a/index.html
+++ b/index.html
@@ -880,7 +880,8 @@
       { id:"valkyrie1",   name:"2023 Aston Martin Valkyrie",   cls:"Track",   topSpeed:220, zeroToSixty:2.4,bhp:1139, handling:110, img:"valkyrie1.png" },
       { id:"toyota1",   name:"2019 Toyota TS050 Hybrid",   cls:"Track",   topSpeed:216, zeroToSixty:2.3,bhp:986, handling:113, img:"toyota1.png" },
       { id:"gt31",   name:"2025 Porsche 911 GT3 R LMGT3",   cls:"Track",   topSpeed:186, zeroToSixty:2.9,bhp:550, handling:102, img:"gt31.png" },
-      { id:"project81",   name:"2019 Jaguar XE SV Project 8",   cls:"GT",   topSpeed:200, zeroToSixty:3.3,bhp:592, handling:93, img:"project81.png" }
+      { id:"project81",   name:"2019 Jaguar XE SV Project 8",   cls:"GT",   topSpeed:200, zeroToSixty:3.3,bhp:592, handling:93, img:"project81.png" },
+      { id:"r81",   name:"2019 Audi R8 LMS GT3 Evo",   cls:"Track",   topSpeed:191, zeroToSixty:3.2,bhp:585, handling:102, img:"r81.png" }
 
     ];
   
