--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
       { id:"m31",   name:"2012 BMW M3",   cls:"GT",     topSpeed:155, zeroToSixty:4.3, bhp:414, handling:86, img:"m31.png" },
       { id:"cobra1",  name:"2020 Ford Mustang Cobra Jet 1400",  cls:"Track",  topSpeed:179, zeroToSixty:1.5, bhp:1400, handling:62, img:"cobra1.png" },
       { id:"919evo1",    name:"2018 Porsche 919 Hybrid Evo",    cls:"Track",  topSpeed:230, zeroToSixty:2.1,bhp:1160, handling:115, img:"919evo1.png" },
-      { id:"jesko1",   name:"2024 Koenigsegg Jesko Absolut",   cls:"GT",     topSpeed:311, zeroToSixty:2.3,bhp:1280, handling:98, img:"jesko1.png" },
+      { id:"jesko1",   name:"2024 Koenigsegg Jesko Absolut",   cls:"GT",     topSpeed:311, zeroToSixty:2.3,bhp:1280, handling:100, img:"jesko1.png" },
 
       /* Add more cars below (just keep unique ids) */
       { id:"amgone1",    name:"2023 Mercedes-AMG One",    cls:"Track",     topSpeed:219, zeroToSixty:2.9,bhp:1049, handling:110, img:"amgone1.png" },
@@ -882,7 +882,8 @@
       { id:"gt31",   name:"2025 Porsche 911 GT3 R LMGT3",   cls:"Track",   topSpeed:186, zeroToSixty:2.9,bhp:550, handling:102, img:"gt31.png" },
       { id:"project81",   name:"2019 Jaguar XE SV Project 8",   cls:"GT",   topSpeed:200, zeroToSixty:3.3,bhp:592, handling:93, img:"project81.png" },
       { id:"r81",   name:"2019 Audi R8 LMS GT3 Evo",   cls:"Track",   topSpeed:191, zeroToSixty:3.2,bhp:585, handling:102, img:"r81.png" },
-      { id:"idr1",   name:"2018 Volkswagen I.D. R",   cls:"Track",   topSpeed:170, zeroToSixty:2.25,bhp:670, handling:111, img:"idr1.png" }
+      { id:"idr1",   name:"2018 Volkswagen I.D. R",   cls:"Track",   topSpeed:170, zeroToSixty:2.25,bhp:670, handling:111, img:"idr1.png" },
+      { id:"gemera1",   name:"2025 Koenigsegg Gemera HV8",   cls:"GT",   topSpeed:250, zeroToSixty:1.9,bhp:2300, handling:101, img:"gemera1.png" }
 
     ];
   
