--- a/index.html
+++ b/index.html
@@ -883,7 +883,8 @@
       { id:"project81",   name:"2019 Jaguar XE SV Project 8",   cls:"GT",   topSpeed:200, zeroToSixty:3.3,bhp:592, handling:93, img:"project81.png" },
       { id:"r81",   name:"2019 Audi R8 LMS GT3 Evo",   cls:"Track",   topSpeed:191, zeroToSixty:3.2,bhp:585, handling:102, img:"r81.png" },
       { id:"idr1",   name:"2018 Volkswagen I.D. R",   cls:"Track",   topSpeed:170, zeroToSixty:2.25,bhp:670, handling:111, img:"idr1.png" },
-      { id:"gemera1",   name:"2025 Koenigsegg Gemera HV8",   cls:"GT",   topSpeed:250, zeroToSixty:1.9,bhp:2300, handling:101, img:"gemera1.png" }
+      { id:"gemera1",   name:"2025 Koenigsegg Gemera HV8",   cls:"GT",   topSpeed:250, zeroToSixty:1.9,bhp:2300, handling:101, img:"gemera1.png" },
+      { id:"499p1",   name:"2023 Ferrari 499P",   cls:"Track",   topSpeed:214, zeroToSixty:2.8,bhp:671, handling:111, img:"499p1.png" }
 
     ];
   
