--- a/index.html
+++ b/index.html
@@ -877,14 +877,16 @@
       { id:"turbos1",   name:"2026 Porsche 911 Turbo S",   cls:"GT",   topSpeed:205, zeroToSixty:2.4,bhp:701, handling:97, img:"turbos1.png" },
       { id:"m42",   name:"2025 BMW M4 CS",   cls:"GT",   topSpeed:188, zeroToSixty:2.9,bhp:542, handling:93, img:"m42.png" },
       { id:"mcmurtry1",   name:"2022 McMurtry Spéirling",   cls:"Track",   topSpeed:185, zeroToSixty:1.4,bhp:1000, handling:113, img:"mcmurtry1.png" },
-      { id:"valkyrie1",   name:"2023 Aston Martin Valkyrie",   cls:"Track",   topSpeed:220, zeroToSixty:2.4,bhp:1139, handling:110, img:"valkyrie1.png" },
+      { id:"valkyrie1",   name:"2023 Aston Martin Valkyrie",   cls:"Track",   topSpeed:220, zeroToSixty:2.4,bhp:1139, handling:109, img:"valkyrie1.png" },
       { id:"toyota1",   name:"2019 Toyota TS050 Hybrid",   cls:"Track",   topSpeed:216, zeroToSixty:2.3,bhp:986, handling:113, img:"toyota1.png" },
       { id:"gt31",   name:"2025 Porsche 911 GT3 R LMGT3",   cls:"Track",   topSpeed:186, zeroToSixty:2.9,bhp:550, handling:102, img:"gt31.png" },
       { id:"project81",   name:"2019 Jaguar XE SV Project 8",   cls:"GT",   topSpeed:200, zeroToSixty:3.3,bhp:592, handling:93, img:"project81.png" },
       { id:"r81",   name:"2019 Audi R8 LMS GT3 Evo",   cls:"Track",   topSpeed:191, zeroToSixty:3.2,bhp:585, handling:102, img:"r81.png" },
       { id:"idr1",   name:"2018 Volkswagen I.D. R",   cls:"Track",   topSpeed:170, zeroToSixty:2.25,bhp:670, handling:111, img:"idr1.png" },
       { id:"gemera1",   name:"2025 Koenigsegg Gemera HV8",   cls:"GT",   topSpeed:250, zeroToSixty:1.9,bhp:2300, handling:101, img:"gemera1.png" },
-      { id:"499p1",   name:"2023 Ferrari 499P",   cls:"Track",   topSpeed:214, zeroToSixty:2.8,bhp:671, handling:111, img:"499p1.png" }
+      { id:"499p1",   name:"2023 Ferrari 499P",   cls:"Track",   topSpeed:214, zeroToSixty:2.8,bhp:671, handling:111, img:"499p1.png" },
+      { id:"valkyrie2",   name:"2022 Aston Martin Valkyrie AMR Pro",   cls:"Track",   topSpeed:225, zeroToSixty:2.5,bhp:1000, handling:110, img:"valkyrie2.png" }
+
 
     ];
   
