--- a/index.html
+++ b/index.html
@@ -885,8 +885,8 @@
       { id:"idr1",   name:"2018 Volkswagen I.D. R",   cls:"Track",   topSpeed:170, zeroToSixty:2.25,bhp:670, handling:111, img:"idr1.png" },
       { id:"gemera1",   name:"2025 Koenigsegg Gemera HV8",   cls:"GT",   topSpeed:250, zeroToSixty:1.9,bhp:2300, handling:101, img:"gemera1.png" },
       { id:"499p1",   name:"2023 Ferrari 499P",   cls:"Track",   topSpeed:214, zeroToSixty:2.8,bhp:671, handling:111, img:"499p1.png" },
-      { id:"valkyrie2",   name:"2022 Aston Martin Valkyrie AMR Pro",   cls:"Track",   topSpeed:225, zeroToSixty:2.5,bhp:1000, handling:110, img:"valkyrie2.png" }
-
+      { id:"valkyrie2",   name:"2022 Aston Martin Valkyrie AMR Pro",   cls:"Track",   topSpeed:225, zeroToSixty:2.5,bhp:1000, handling:110, img:"valkyrie2.png" },
+      { id:"mc121",   name:"2005 Maserati MC12 Stradale",   cls:"GT",   topSpeed:205, zeroToSixty:3.6,bhp:630, handling:95, img:"mc121.png" }
 
     ];
   
